Switch to pre-wrap to avoid horizontal scrolling. Closes #13

--- a/res/sass/_base.sass
+++ b/res/sass/_base.sass
@@ -247,6 +247,7 @@ pre, tt, code
   font-family: Menlo, Monaco, Consolas, "Lucida Console", monospace
   margin: 0
   padding: 0
+  white-space: pre-wrap
 
 .line-num
   display: inline-block
